--- a/manifest.json
+++ b/manifest.json
@@ -418,7 +418,7 @@
       "output": {
         ".html": {
           "relative_path": "common/toc.html",
-          "hash": "Dn2Zm7m9vIs1bB6An7qUOXHmIHf+/yXyIpgv9oDc1ls="
+          "hash": "J9OU3TaUU/N1OjmboJoa+MNXxgppZU3hw4coRsN3kKg="
         }
       },
       "is_incremental": false,
@@ -1381,7 +1381,7 @@
       "output": {
         ".html": {
           "relative_path": "common/分解弹性时程计算参数.html",
-          "hash": "qK3fpHB7/VtHiWMzz0fOZNj4CDZG/45tGD+KF166JLE="
+          "hash": "EiIeSb03ZcZI7Nt1oJATt/XsZi6RBXYeQ9GSZGl2lyM="
         }
       },
       "is_incremental": false,
@@ -4009,7 +4009,7 @@
       "output": {
         ".html": {
           "relative_path": "common/容器：地震波.html",
-          "hash": "9v03Oiia+18U648j4cMBbw80DyPvhJoHhpopvN5Bdbc="
+          "hash": "EavcEXzp6M4vsZMOWh7+9jxIvhujOYghmYcggx4fJYE="
         }
       },
       "is_incremental": false,
@@ -4636,7 +4636,7 @@
       "output": {
         ".html": {
           "relative_path": "common/弹性时程工况定义.html",
-          "hash": "WYGZG4KrK0fwHrP7GbWntuVcsZk9u+53Gw78QSHL5F0="
+          "hash": "QxRL1FpJf6NwXqhWQ1j0Q7vcbuZIN341BZS8uSCvZtM="
         }
       },
       "is_incremental": false,
@@ -4648,7 +4648,7 @@
       "output": {
         ".html": {
           "relative_path": "common/弹性时程工况组合.html",
-          "hash": "E7GduIcoEh0cODnNnIHMHIYu4M8XqC3j+Z4CaQnFpM8="
+          "hash": "kFuGQc7SZv7CiAu/BGQi30hW6HYzjdn4K/nWaLRgX8M="
         }
       },
       "is_incremental": false,
@@ -4660,7 +4660,7 @@
       "output": {
         ".html": {
           "relative_path": "common/弹性时程选波参数.html",
-          "hash": "JzJ/hRhdow92EAho0ii4ruU4M7TFZIGdApHWV9y/dJw="
+          "hash": "aUx+a6g6IExVIF8meVd/R2bNu0/eWzpPIpYP+gIcUIo="
         }
       },
       "is_incremental": false,
@@ -5155,7 +5155,7 @@
       "output": {
         ".html": {
           "relative_path": "common/抗震设防水准.html",
-          "hash": "stSaRzqUuNJKs6sJVD2cLDWshB4hu3RKbNTUoG1c2bY="
+          "hash": "ANW85NGCLUb/LveI0pZHbwkIL2Wb8J1LpTnZpQ5Xh6M="
         }
       },
       "is_incremental": false,
@@ -5167,7 +5167,7 @@
       "output": {
         ".html": {
           "relative_path": "common/抗震设防烈度.html",
-          "hash": "NL9+D8d8o8JCeA4hl696LjgAuKLKPVMUPFuc4XNNTGc="
+          "hash": "8KLYmEmhYOzLabCpnG1C1CxsV4HeeqBSKyEjf0nnukQ="
         }
       },
       "is_incremental": false,
@@ -7219,7 +7219,7 @@
       "output": {
         ".html": {
           "relative_path": "common/特征周期.html",
-          "hash": "NdHx1nY1TxzYFyK8bPoEpRQxgfGTZtRShnNMYOYsDmA="
+          "hash": "1kqas1bi4/Th9RKg19YzPoq3SbPv1j8r/19vVn8mTSA="
         }
       },
       "is_incremental": false,
@@ -7459,7 +7459,7 @@
       "output": {
         ".html": {
           "relative_path": "common/生成用户自定义人工波.html",
-          "hash": "05BTFF40eIMIICiNEsCQY4/IoRzYnjj9lcOHqBpKfiA="
+          "hash": "LjXcsg8bINMUaPBWjVCZqAaWx9Lvuc+td5oPMEfUYWU="
         }
       },
       "is_incremental": false,
@@ -8695,7 +8695,7 @@
       "output": {
         ".html": {
           "relative_path": "common/自动筛选地震波.html",
-          "hash": "TBQeqBufSBhTtQS6xTrBLlv2Jpj/nPS4mp/8vUI/htE="
+          "hash": "h+d0qpRxGJf61Jp4vg9zHqjKLb6kM6tiPzg1SpWhNyI="
         }
       },
       "is_incremental": false,
@@ -8707,7 +8707,7 @@
       "output": {
         ".html": {
           "relative_path": "common/自定义人工波详细信息.html",
-          "hash": "FJ7pJCvlPZkvArK0+tCDs8g5YBXauiV6DY78BmJ09Cw="
+          "hash": "d1ldpLO3zJdnWT0ukjBFOYs2T43SkAa2OQKEEFI1lDg="
         }
       },
       "is_incremental": false,
@@ -8911,7 +8911,7 @@
       "output": {
         ".html": {
           "relative_path": "common/获取地震波.html",
-          "hash": "y/g4Ch7dgrgMhfXkmaeGRFdNQK2J+WshWikBVifeiig="
+          "hash": "IwQi8DPJNADDumeSmn3X1JbdRKKVkMP05C6XsLvki6I="
         }
       },
       "is_incremental": false,
@@ -9775,7 +9775,7 @@
       "output": {
         ".html": {
           "relative_path": "common/计算与输出参数.html",
-          "hash": "yN4m4/aTo9/B3DTgYODCWxArcmzs3VL0e7WFCV5+4o8="
+          "hash": "PxbQdBhxh1y6xs50W6QzB6iQBxJkq3QiX6PK/IM66lk="
         }
       },
       "is_incremental": false,
@@ -10039,7 +10039,7 @@
       "output": {
         ".html": {
           "relative_path": "common/读取弹性时程参数.html",
-          "hash": "Tw8ZBJTVDcegUqOzQEykkgB3DTe3nQ55+ghcGTYYRqA="
+          "hash": "jA3ROM/xMIbUKkX1JgPofPVN67dajYXGOtGFmMlg/dI="
         }
       },
       "is_incremental": false,
@@ -13087,6 +13087,28 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "file/分解地震波信息_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/分解地震波信息_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/分解地震波信息_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/分解地震波信息_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "file/分解墙_01.pgu",
       "output": {
         "resource": {
@@ -13146,6 +13168,94 @@
       "output": {
         "resource": {
           "relative_path": "file/分解平面_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/分解弹性时程工况定义_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/分解弹性时程工况定义_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/分解弹性时程工况定义_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/分解弹性时程工况定义_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/分解弹性时程工况组合_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/分解弹性时程工况组合_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/分解弹性时程工况组合_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/分解弹性时程工况组合_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/分解弹性时程计算参数_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/分解弹性时程计算参数_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/分解弹性时程计算参数_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/分解弹性时程计算参数_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/分解弹性时程选波参数_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/分解弹性时程选波参数_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/分解弹性时程选波参数_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/分解弹性时程选波参数_01.png"
         }
       },
       "is_incremental": false,
@@ -13982,6 +14092,28 @@
       "output": {
         "resource": {
           "relative_path": "file/分解荷载工况_01.jpg"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/分解计算与输出参数_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/分解计算与输出参数_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/分解计算与输出参数_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/分解计算与输出参数_01.png"
         }
       },
       "is_incremental": false,
@@ -17047,6 +17179,28 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "file/容器：地震波_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/容器：地震波_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/容器：地震波_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/容器：地震波_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "file/容器：墙_01.png",
       "output": {
         "resource": {
@@ -17667,6 +17821,72 @@
       "output": {
         "resource": {
           "relative_path": "file/弧度转角度_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/弹性时程工况定义_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/弹性时程工况定义_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/弹性时程工况定义_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/弹性时程工况定义_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/弹性时程工况组合_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/弹性时程工况组合_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/弹性时程工况组合_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/弹性时程工况组合_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/弹性时程选波参数_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/弹性时程选波参数_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/弹性时程选波参数_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/弹性时程选波参数_01.png"
         }
       },
       "is_incremental": false,
@@ -18448,6 +18668,50 @@
       "output": {
         "resource": {
           "relative_path": "file/抗震等级_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/抗震设防水准_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/抗震设防水准_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/抗震设防水准_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/抗震设防水准_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/抗震设防烈度_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/抗震设防烈度_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/抗震设防烈度_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/抗震设防烈度_01.png"
         }
       },
       "is_incremental": false,
@@ -20974,6 +21238,28 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "file/特征周期_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/特征周期_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/特征周期_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/特征周期_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "file/特殊构件定义(墙)_01.pgu",
       "output": {
         "resource": {
@@ -21216,6 +21502,28 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "file/生成地震波信息_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/生成地震波信息_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/生成地震波信息_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/生成地震波信息_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "file/生成构件信息_01.gif",
       "output": {
         "resource": {
@@ -21253,6 +21561,28 @@
       "output": {
         "resource": {
           "relative_path": "file/生成楼板_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/生成用户自定义人工波_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/生成用户自定义人工波_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/生成用户自定义人工波_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/生成用户自定义人工波_01.png"
         }
       },
       "is_incremental": false,
@@ -21854,6 +22184,50 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "file/自动筛选地震波_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/自动筛选地震波_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/自动筛选地震波_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/自动筛选地震波_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/自定义人工波详细信息_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/自定义人工波详细信息_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/自定义人工波详细信息_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/自定义人工波详细信息_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "file/自定义构件名称_01.jpg",
       "output": {
         "resource": {
@@ -22155,6 +22529,28 @@
       "output": {
         "resource": {
           "relative_path": "file/获取一般楼板定义_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/获取地震波_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/获取地震波_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/获取地震波_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/获取地震波_01.png"
         }
       },
       "is_incremental": false,
@@ -23141,6 +23537,50 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "file/计算与输出参数_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/计算与输出参数_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/计算与输出参数_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/计算与输出参数_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/计算弹性时程(定波)_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/计算弹性时程(定波)_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/计算弹性时程(定波)_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/计算弹性时程(定波)_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "file/记录器_01.png",
       "output": {
         "resource": {
@@ -23299,6 +23739,28 @@
       "output": {
         "resource": {
           "relative_path": "file/读取YJK模型_01.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/读取弹性时程参数_01.pgz",
+      "output": {
+        "resource": {
+          "relative_path": "file/读取弹性时程参数_01.pgz"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "file/读取弹性时程参数_01.png",
+      "output": {
+        "resource": {
+          "relative_path": "file/读取弹性时程参数_01.png"
         }
       },
       "is_incremental": false,
